# ToDOCX

./: .gitignore  LICENSE  README.md  file_version_info.txt  main.py  pyproject.toml  version_info.py
src/: __init__.py  config.py  docx_analyzer.py  docx_to_md.py  formatter.py  latex_analyzer.py  latex_formatter.py  md_converter.py  template_manager.py  version.py
src/ui/: components.py  main_window.py  smart_format_page.py  styles.py
